Fix minor bug with text-right being clipped

--- a/src/stylesheets/helpers/_helpers-text.scss
+++ b/src/stylesheets/helpers/_helpers-text.scss
@@ -49,6 +49,7 @@
 /// @since 0.1.0
 .text-right {
   @include important(text-align, right);
+  max-width: 100%; // Because of max character width on paragraphs
 }
 
 // TODO: Responsive text alignment
